Add comprehensive Exploratory Data Analysis (EDA) in Jupyter notebook for Tesla, BND, and SPY stocks

--- a/notebooks/Preprocessing_and_Data_Exploration.ipynb
+++ b/notebooks/Preprocessing_and_Data_Exploration.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 10 Academy: Artificial Intelligence Mastery\n",
+    "## Time Series Forecasting for Portfolio Management Optimization\n",
+    "### Data fetching from yahoo finance and Data Exploration \n",
+    "Ethel.C "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -39,162 +49,105 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:root:Loaded data for BND_historical from E:\\DS+ML\\AIM3\\Week.11\\Time-Series-Forecasting-for-Optimized-Portfolio-Management\\financial_data\\BND_historical.csv\n",
-      "INFO:root:Loaded data for SPY_historical from E:\\DS+ML\\AIM3\\Week.11\\Time-Series-Forecasting-for-Optimized-Portfolio-Management\\financial_data\\SPY_historical.csv\n",
-      "INFO:root:Loaded data for TSLA_historical from E:\\DS+ML\\AIM3\\Week.11\\Time-Series-Forecasting-for-Optimized-Portfolio-Management\\financial_data\\TSLA_historical.csv\n",
-      "INFO:root:Statistics for BND_historical:\n",
-      "INFO:root:         Adj Close\n",
-      "count  2535.000000\n",
-      "mean     69.289451\n",
-      "std       4.792146\n",
-      "min      61.860882\n",
-      "25%      65.565269\n",
-      "50%      68.329124\n",
-      "75%      72.879921\n",
-      "max      78.823250\n",
-      "INFO:root:Statistics for SPY_historical:\n",
-      "INFO:root:         Adj Close\n",
-      "count  2535.000000\n",
-      "mean    316.067401\n",
-      "std     117.926910\n",
-      "min     156.800827\n",
-      "25%     214.842003\n",
-      "50%     277.117889\n",
-      "75%     405.869202\n",
-      "max     609.750000\n",
-      "INFO:root:Statistics for TSLA_historical:\n",
-      "INFO:root:         Adj Close\n",
-      "count  2535.000000\n",
-      "mean    117.848209\n",
-      "std     116.508288\n",
-      "min       9.578000\n",
-      "25%      17.228000\n",
-      "50%      30.298000\n",
-      "75%     221.525002\n",
-      "max     479.859985\n",
-      "INFO:root:Data types for BND_historical:\n",
-      "INFO:root:Date          object\n",
-      "Open          object\n",
-      "High          object\n",
-      "Low           object\n",
-      "Close         object\n",
-      "Adj Close    float64\n",
-      "Volume        object\n",
+      "\n",
+      "Before Normalization - BND_historical:\n",
+      "Basic Statistics for 'Close' and 'Volume':\n",
+      "             Close        Volume\n",
+      "count  2536.000000  2.536000e+03\n",
+      "mean     69.289451  4.233200e+06\n",
+      "std       4.791201  2.795532e+06\n",
+      "min      61.860882  0.000000e+00\n",
+      "25%      65.569477  2.059400e+06\n",
+      "50%      68.329914  3.805900e+06\n",
+      "75%      72.879097  5.626450e+06\n",
+      "max      78.823250  3.193720e+07\n",
+      "Data types:\n",
+      "Close     float64\n",
+      "Volume    float64\n",
       "dtype: object\n",
-      "INFO:root:Data types for SPY_historical:\n",
-      "INFO:root:Date          object\n",
-      "Open          object\n",
-      "High          object\n",
-      "Low           object\n",
-      "Close         object\n",
-      "Adj Close    float64\n",
-      "Volume        object\n",
+      "\n",
+      "After Normalization:\n",
+      "Basic Statistics for 'Close' and 'Volume':\n",
+      "       Close_Normalized  Volume_Normalized\n",
+      "count       2536.000000        2536.000000\n",
+      "mean           0.437944           0.132548\n",
+      "std            0.282461           0.087532\n",
+      "min            0.000000           0.000000\n",
+      "25%            0.218637           0.064483\n",
+      "50%            0.381376           0.119168\n",
+      "75%            0.649568           0.176172\n",
+      "max            1.000000           1.000000\n",
+      "Data types:\n",
+      "Close_Normalized     float64\n",
+      "Volume_Normalized    float64\n",
       "dtype: object\n",
-      "INFO:root:Data types for TSLA_historical:\n",
-      "INFO:root:Date          object\n",
-      "Open          object\n",
-      "High          object\n",
-      "Low           object\n",
-      "Close         object\n",
-      "Adj Close    float64\n",
-      "Volume        object\n",
+      "\n",
+      "Before Normalization - SPY_historical:\n",
+      "Basic Statistics for 'Close' and 'Volume':\n",
+      "             Close        Volume\n",
+      "count  2536.000000  2.536000e+03\n",
+      "mean    316.067401  8.714655e+07\n",
+      "std     117.903648  4.486368e+07\n",
+      "min     156.800827  2.027000e+07\n",
+      "25%     214.851879  5.862088e+07\n",
+      "50%     277.234024  7.643010e+07\n",
+      "75%     405.774750  1.018218e+08\n",
+      "max     609.750000  5.072443e+08\n",
+      "Data types:\n",
+      "Close     float64\n",
+      "Volume    float64\n",
       "dtype: object\n",
-      "E:\\DS+ML\\AIM3\\Week.11\\Time-Series-Forecasting-for-Optimized-Portfolio-Management\\src\\clean_data.py:49: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
-      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+      "After Normalization:\n",
+      "Basic Statistics for 'Close' and 'Volume':\n",
+      "       Close_Normalized  Volume_Normalized\n",
+      "count       2536.000000        2536.000000\n",
+      "mean           0.351621           0.137331\n",
+      "std            0.260302           0.092127\n",
+      "min            0.000000           0.000000\n",
+      "25%            0.128162           0.078753\n",
+      "50%            0.265887           0.115325\n",
+      "75%            0.549673           0.167466\n",
+      "max            1.000000           1.000000\n",
+      "Data types:\n",
+      "Close_Normalized     float64\n",
+      "Volume_Normalized    float64\n",
+      "dtype: object\n",
       "\n",
+      "Before Normalization - TSLA_historical:\n",
+      "Basic Statistics for 'Close' and 'Volume':\n",
+      "             Close        Volume\n",
+      "count  2536.000000  2.536000e+03\n",
+      "mean    117.848209  1.120308e+08\n",
+      "std     116.485306  7.386051e+07\n",
+      "min       9.578000  1.062000e+07\n",
+      "25%      17.236000  6.680798e+07\n",
+      "50%      30.784333  9.264390e+07\n",
+      "75%     221.427502  1.294076e+08\n",
+      "max     479.859985  9.140820e+08\n",
+      "Data types:\n",
+      "Close     float64\n",
+      "Volume    float64\n",
+      "dtype: object\n",
       "\n",
-      "  df[col].fillna(df[col].mean(), inplace=True)\n",
-      "E:\\DS+ML\\AIM3\\Week.11\\Time-Series-Forecasting-for-Optimized-Portfolio-Management\\src\\clean_data.py:52: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-      "\n",
-      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-      "\n",
-      "\n",
-      "  df[col].fillna(df[col].mode()[0], inplace=True)\n",
-      "INFO:root:Handled missing values for BND_historical\n",
-      "E:\\DS+ML\\AIM3\\Week.11\\Time-Series-Forecasting-for-Optimized-Portfolio-Management\\src\\clean_data.py:49: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-      "\n",
-      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-      "\n",
-      "\n",
-      "  df[col].fillna(df[col].mean(), inplace=True)\n",
-      "E:\\DS+ML\\AIM3\\Week.11\\Time-Series-Forecasting-for-Optimized-Portfolio-Management\\src\\clean_data.py:52: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-      "\n",
-      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-      "\n",
-      "\n",
-      "  df[col].fillna(df[col].mode()[0], inplace=True)\n",
-      "INFO:root:Handled missing values for SPY_historical\n",
-      "E:\\DS+ML\\AIM3\\Week.11\\Time-Series-Forecasting-for-Optimized-Portfolio-Management\\src\\clean_data.py:49: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-      "\n",
-      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-      "\n",
-      "\n",
-      "  df[col].fillna(df[col].mean(), inplace=True)\n",
-      "E:\\DS+ML\\AIM3\\Week.11\\Time-Series-Forecasting-for-Optimized-Portfolio-Management\\src\\clean_data.py:52: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-      "\n",
-      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-      "\n",
-      "\n",
-      "  df[col].fillna(df[col].mode()[0], inplace=True)\n",
-      "INFO:root:Handled missing values for TSLA_historical\n",
-      "E:\\DS+ML\\AIM3\\Week.11\\Time-Series-Forecasting-for-Optimized-Portfolio-Management\\src\\clean_data.py:64: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-      "\n",
-      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-      "\n",
-      "\n",
-      "  df['Close'].fillna(df['Close'].mean(), inplace=True)\n",
-      "E:\\DS+ML\\AIM3\\Week.11\\Time-Series-Forecasting-for-Optimized-Portfolio-Management\\src\\clean_data.py:65: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-      "\n",
-      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-      "\n",
-      "\n",
-      "  df['Volume'].fillna(df['Volume'].mean(), inplace=True)\n",
-      "INFO:root:Normalized 'Close' and 'Volume' columns for BND_historical\n",
-      "E:\\DS+ML\\AIM3\\Week.11\\Time-Series-Forecasting-for-Optimized-Portfolio-Management\\src\\clean_data.py:64: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-      "\n",
-      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-      "\n",
-      "\n",
-      "  df['Close'].fillna(df['Close'].mean(), inplace=True)\n",
-      "E:\\DS+ML\\AIM3\\Week.11\\Time-Series-Forecasting-for-Optimized-Portfolio-Management\\src\\clean_data.py:65: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-      "\n",
-      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-      "\n",
-      "\n",
-      "  df['Volume'].fillna(df['Volume'].mean(), inplace=True)\n",
-      "INFO:root:Normalized 'Close' and 'Volume' columns for SPY_historical\n",
-      "E:\\DS+ML\\AIM3\\Week.11\\Time-Series-Forecasting-for-Optimized-Portfolio-Management\\src\\clean_data.py:64: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-      "\n",
-      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-      "\n",
-      "\n",
-      "  df['Close'].fillna(df['Close'].mean(), inplace=True)\n",
-      "E:\\DS+ML\\AIM3\\Week.11\\Time-Series-Forecasting-for-Optimized-Portfolio-Management\\src\\clean_data.py:65: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-      "\n",
-      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-      "\n",
-      "\n",
-      "  df['Volume'].fillna(df['Volume'].mean(), inplace=True)\n",
-      "INFO:root:Normalized 'Close' and 'Volume' columns for TSLA_historical\n",
-      "INFO:root:Saved cleaned data for BND_historical to E:\\DS+ML\\AIM3\\Week.11\\Time-Series-Forecasting-for-Optimized-Portfolio-Management\\cleaned_data\\BND_historical_cleaned.csv\n",
-      "INFO:root:Saved cleaned data for SPY_historical to E:\\DS+ML\\AIM3\\Week.11\\Time-Series-Forecasting-for-Optimized-Portfolio-Management\\cleaned_data\\SPY_historical_cleaned.csv\n",
-      "INFO:root:Saved cleaned data for TSLA_historical to E:\\DS+ML\\AIM3\\Week.11\\Time-Series-Forecasting-for-Optimized-Portfolio-Management\\cleaned_data\\TSLA_historical_cleaned.csv\n"
+      "After Normalization:\n",
+      "Basic Statistics for 'Close' and 'Volume':\n",
+      "       Close_Normalized  Volume_Normalized\n",
+      "count       2536.000000        2536.000000\n",
+      "mean           0.230224           0.112247\n",
+      "std            0.247692           0.081753\n",
+      "min            0.000000           0.000000\n",
+      "25%            0.016284           0.062192\n",
+      "50%            0.045093           0.090788\n",
+      "75%            0.450473           0.131481\n",
+      "max            1.000000           1.000000\n",
+      "Data types:\n",
+      "Close_Normalized     float64\n",
+      "Volume_Normalized    float64\n",
+      "dtype: object\n"
      ]
     }
    ],
